force-app/main/default/objects/SX_Enrollment__c/SX_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Tracks the Schoox LMS course enrollment for each learner along with key statistics.</description>
    <label>SX Enrollment</label>
    <nameField>
        <label>SX Enrollment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SX Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>