force-app/main/default/objects/SX_Enrollment__c/fields/Account_Membership__c.field-meta.xml
<CustomField>
    <fullName>Account_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Membership</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>SX Enrollments</relationshipLabel>
    <relationshipName>SX_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>