force-app/main/default/objects/SX_Enrollment__c/fields/CE_Credits__c.field-meta.xml
<CustomField>
    <fullName>CE_Credits__c</fullName>
    <formula>SX_Course__r.CE_Hours__c</formula>
    <label>CE Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>