force-app/main/default/objects/SX_Enrollment__c/fields/Certification_Course__c.field-meta.xml
<CustomField>
    <fullName>Certification_Course__c</fullName>
    <formula>NOT(ISBLANK(SX_Course__r.Membership__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Course</label>
    <type>Checkbox</type>
</CustomField>