force-app/main/default/objects/SX_Enrollment__c/fields/Course_Completed_Counter__c.field-meta.xml
<CustomField>
    <fullName>Course_Completed_Counter__c</fullName>
    <formula>IF (NOT( ISBLANK( SX_Completed_Date__c )) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Completed Counter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>