force-app/main/default/objects/SX_Enrollment__c/fields/Course_Image__c.field-meta.xml
<CustomField>
    <fullName>Course_Image__c</fullName>
    <formula>IMAGE( Course_Image_URL_Link__c , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Image</label>
    <type>Text</type>
</CustomField>