force-app/main/default/objects/SX_Enrollment__c/fields/Course_Image_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>Course_Image_URL_Link__c</fullName>
    <formula>SX_Course__r.SX_Course_Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Image URL Link</label>
    <type>Text</type>
</CustomField>