force-app/main/default/objects/SX_Enrollment__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <formula>CASE( SX_percent_Completed__c , 0, &quot;Not Started&quot;, 1, &quot;Completed&quot;,&quot;In Progress&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status</label>
    <type>Text</type>
</CustomField>