force-app/main/default/objects/SX_Enrollment__c/fields/Course_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Course_Status_Color__c</fullName>
    <formula>IMAGE(
CASE( Course_Status__c ,
&quot;Completed&quot;, &quot;https://d4w000006kb3nuae-dev-ed--c.visualforce.com/resource/1664823748000/SXCourseStatusColors/Activity_good_32.png&quot;,
&quot;In Progress&quot;, &quot;https://d4w000006kb3nuae-dev-ed--c.visualforce.com/resource/1664823748000/SXCourseStatusColors/Activity_fair_32.png&quot;,
&quot;Not Started&quot;, &quot;https://d4w000006kb3nuae-dev-ed--c.visualforce.com/resource/1664823748000/SXCourseStatusColors/Activity_bad_32.png&quot;,
&quot;/s.gif&quot;),
&quot;Course Status&quot;,40,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status Color</label>
    <type>Text</type>
</CustomField>