force-app/main/default/objects/SX_Enrollment__c/fields/Enrollment_Counter__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>