force-app/main/default/objects/SX_Enrollment__c/fields/SF_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SF_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SX Enrollments</relationshipLabel>
    <relationshipName>SX_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>