force-app/main/default/objects/SX_Enrollment__c/fields/SF_Contact_or_User__c.field-meta.xml
<CustomField>
    <fullName>SF_Contact_or_User__c</fullName>
    <formula>IF ( ISBLANK( SF_User_Lookup__c ),&quot;SF Contact&quot;,&quot;SF User&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Contact or User</label>
    <type>Text</type>
</CustomField>