force-app/main/default/objects/SX_Enrollment__c/fields/SF_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SF_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SX_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>