force-app/main/default/objects/SX_Enrollment__c/fields/Student_Course_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Course_Id__c</fullName>
    <externalId>true</externalId>
    <label>Student Course Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>