force-app/main/default/objects/SX_Enrollment__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <referenceTo>SX_LMS_User__c</referenceTo>
    <relationshipLabel>SX Enrollments</relationshipLabel>
    <relationshipName>SX_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>