force-app/main/default/objects/SX_Enrollment__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Student_ID__r.LMS_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>