force-app/main/default/objects/SX_Enrollment__c/fields/SX_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>SX_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>