force-app/main/default/objects/SX_Enrollment__c/fields/SX_Course__c.field-meta.xml
<CustomField>
    <fullName>SX_Course__c</fullName>
    <label>Course</label>
    <referenceTo>SX_Courses__c</referenceTo>
    <relationshipLabel>SX Enrollments</relationshipLabel>
    <relationshipName>SX_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>