force-app/main/default/objects/SX_Enrollment__c/fields/SX_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Name__c</fullName>
    <formula>SX_Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>