force-app/main/default/objects/SX_Enrollment__c/fields/SX_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>SX_Enrollment_Date__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>