force-app/main/default/objects/SX_Enrollment__c/fields/SX_percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>SX_percent_Completed__c</fullName>
    <label>% Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>