force-app/main/default/objects/SX_Enrollment__c/fields/SX_User_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>SX_User_ID_formula__c</fullName>
    <formula>Student_ID__r.SX_User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX User ID (formula)</label>
    <type>Text</type>
</CustomField>