force-app/main/default/objects/SX_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>SF_User_Lookup__c</columns>
    <columns>SF_Contact_Lookup__c</columns>
    <columns>Student_Name__c</columns>
    <columns>SX_percent_Completed__c</columns>
    <columns>SX_Enrollment_Date__c</columns>
    <columns>SX_Completed_Date__c</columns>
    <columns>SX_Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>